<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginScreen">

    <ImageView
        android:id="@+id/readian_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/readian_log"
        android:src="@drawable/ic_readian_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="135dp"
        android:background="@color/backgroundcolor"
        android:text="@string/email"
        android:textAllCaps="false"
        android:textColor="#2962FF"
        android:textSize="@dimen/display_h7_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/readian_log" />

    <EditText
        android:id="@+id/print_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="230dp"
        android:autofillHints="print_login"
        android:backgroundTint="@color/blue"
        android:ems="15"
        android:hint="@string/print_login"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:text="@string/login"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/print_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="70dp"
        android:autofillHints="print_password"
        android:backgroundTint="@color/blue"
        android:ems="15"
        android:inputType="numberPassword"
        android:minHeight="50dp"
        android:text="@string/password"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/print_login" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="130sp"
        android:background="@color/backgroundcolor"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="@dimen/display_h7_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/print_password" />

    <Button
        android:id="@+id/button_login"
        style="@style/primaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/orlogwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/or_log_in_with"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_login" />

    <ImageView
        android:id="@+id/ic_readian_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/google"
        android:src="@drawable/ic_readian_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orlogwith" />

    <ImageView
        android:id="@+id/ic_readian_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40sp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/facebook"
        android:src="@drawable/ic_readian_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orlogwith" />

    <ImageView
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/privacy"
        android:src="@drawable/ic_privacy_police"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_readian_facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>