<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/readian_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/readian_logo"
            android:src="@drawable/ic_readian_logo" />

        <ImageView
            android:id="@+id/readian_logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:contentDescription="@string/readian_logo"
            android:src="@drawable/ic_readian_logo_name" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/image_readian_welcome"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/image_readian_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/blue"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_readian_welcome" />

    <Button
        android:id="@+id/button2"
        android:layout_width="296dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:strokeColor="@color/blue"
        app:strokeWidth="0.8dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>